# agentwall

./: .gitignore  PLAN.md  README.md  pyproject.toml  setup.sh  test.sh
docs/: README.md
src/agentfirewall/: __init__.py  ai_evaluator.py  audit.py  cli.py  engine.py  process.py  sandbox.py  schema.py
src/agentfirewall/hooks/: shell.py
src/agentfirewall/presets/: __init__.py
src/agentfirewall/ui/: __init__.py  app.py
src/agentfirewall/ui/static/: analytics.js  app.js  style.css
src/agentfirewall/ui/templates/: analytics.html  base.html  config.html  dashboard.html  logs.html
src/agentfirewall/watchers/: filesystem.py
tests/: test_ai_evaluator.py  test_audit.py  test_cli.py  test_cli_phase2.py  test_cli_protect.py  test_engine.py  test_hooks.py  test_presets.py  test_process.py  test_sandbox.py  test_schema.py  test_ui.py  test_watcher.py
